# IR-Methods-Project

./: .gitignore  README.md
Part1/: main.py  utility.py
Part2/: pyproject.toml
Part2/src/: exp1&2.py  exp3.py  exp4.py  exp5&6.py  exp7listwise.py  listwiseBERT.py  listwise_loss_plot.py  pairwise.py  pointwise.ipynb
