[tool.poetry]
name = "ir-reference-material"
version = "0.1.0"
description = ""
authors = ["Potato-Cracker <maheswarbora2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.2"
scipy = "1.12"
networkx = "^3.3"
lightgbm = "^4.3.0"
whoosh = "^2.7.4"
pandas = "^2.2.2"
nltk = "^3.8.1"
cython = "^3.0.10"
gensim = "^4.3.2"
ipykernel = "^6.29.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
rank-bm25 = "^0.2.2"
matplotlib = "^3.8.4"
spacy = "^3.7.4"
transformers = "^4.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
